Connection to backend. Adding Get,Add requests. Showing details in new page.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1>VaxApp</h1>
-<app-vaccine></app-vaccine>
+<nav>
+    <a routerLink="/vaccines">Vaccines</a>
+</nav>
+<router-outlet></router-outlet>
