--- a/src/app/vaccine-detail/vaccine-detail.component.html
+++ b/src/app/vaccine-detail/vaccine-detail.component.html
@@ -1,5 +1,5 @@
 <div >
-    <h2>{{vaccine.manufacturersName}} - Vaccine details</h2>
-    <div><span>Manufacturers Name: </span>{{vaccine.manufacturersName}}</div>
-    <div><span>Required number of shots: </span>{{vaccine.requiredDosage}}</div>
+    <h2>{{vaccine?.manufacturersName}} - Vaccine details</h2>
+    <div><span>Manufacturers Name: </span>{{vaccine?.manufacturersName}}</div>
+    <div><span>Required number of shots: </span>{{vaccine?.requiredDosage}}</div>
 </div>
